2009-04-27  Stefan Kost  <ensonic@users.sf.net>

	* Matilde/Tracker/Makefile.am:
	  Remove TODO and add missing whitespace.

2009-04-27  Stefan Kost  <ensonic@users.sf.net>

	* README:
	  Update to mention the machines are to be used via bml+gst-buzztard.

2009-04-26  Stefan Kost  <ensonic@users.sf.net>

	* Jeskola/Ninja/Ninja.cpp:
	  Use relative includes.

	* Makk/M3/M3.cpp:
	* Makk/M3/Makefile.am:
	* Makk/M4/M4.cpp:
	* Makk/M4/Makefile.am:
	* Makk/Makefile.am:
	* configure.ac:
	* Makk (added):
	* Makk/M3 (added):
	* Makk/M3/M3.cpp (added):
	* Makk/M3/Makefile.am (added):
	* Makk/M4 (added):
	* Makk/M4/M4.cpp (added):
	* Makk/M4/Makefile.am (added):
	* Makk/Makefile.am (added):
	  Port M3 and almost M4. For M4 we need to port 2 tools to build the
	  wavetable tools still.

2009-04-26  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	* gen_makefile_am.sh:
	* gen_makefile_am.sh (added):
	  More tips in HACKING. Add script to generate Makefile.am for a machine.

	* Jeskola/Makefile.am:
	* Jeskola/Trilok/Makefile.am:
	* Jeskola/Trilok/Trilok.cpp:
	* configure.ac:
	* Jeskola/Trilok/Makefile.am (added):
	  Port Trilok.

2009-04-26  Stefan Kost  <ensonic@users.sf.net>

	* Elak/Dist2/Makefile.am:
	* Elak/SVF/Makefile.am:
	* FSM/ArpMan/Makefile.am:
	* FSM/Chorus/Makefile.am:
	* FSM/Chorus2/Makefile.am:
	* FSM/Infector/Makefile.am:
	* FSM/PanzerDelay/Makefile.am:
	* FSM/PhatMan/Makefile.am:
	* FSM/WahMan/Makefile.am:
	* common/mdk/Makefile.am:
	  Fix ID tokens

2009-04-25  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	  More howto info.

2009-04-25  Stefan Kost  <ensonic@users.sf.net>

	* FSM/Makefile.am:
	* FSM/Philta/Philta.cpp:
	* FSM/ScatMan/ScatMan.cpp:
	* FSM/ScrapMan/ScrapMan.cpp:
	* FSM/SprayMan/SprayMan.cpp:
	* FSM/TapMan/TapMan.cpp:
	* FSM/TunaMan/TunaMan.cpp:
	* FSM/WahManPro/WahManPro.cpp:
	* FSM/TapMan (added):
	* FSM/TapMan/TapMan.cpp (added):
	* FSM/Philta (added):
	* FSM/Philta/Philta.cpp (added):
	* FSM/ScatMan (added):