@@ -2,16 +2,15 @@
 
 SUBDIRS = SurfsDSPLib
 
-SOURCES = \
-	BuzzInstrument.cpp BuzzInstrument.h \
-	BuzzSample.cpp BuzzSample.h \
-	Channel.cpp Channel.h \
-	Envelope.cpp Envelope.h \
-	IInstrument.cpp IInstrument.h \
-	ISample.cpp ISample.h \
-	Track.cpp Track.h \
-	Tracker.cpp Tracker.h \
-	WavetableManager.cpp WavetabelManager.h
+SRC = BuzzInstrument.cpp BuzzInstrument.h \
+ BuzzSample.cpp BuzzSample.h \
+ Channel.cpp Channel.h \
+ Envelope.cpp Envelope.h \
+ IInstrument.cpp IInstrument.h \
+ ISample.cpp ISample.h \
+ Track.cpp Track.h \
+ Tracker.cpp Tracker.h \
+ WavetableManager.cpp WavetabelManager.h
 
 # unused
 # 	ExtResampler.cpp ExtResampler.h
@@ -19,22 +18,22 @@ SOURCES = \
 plugin_LTLIBRARIES = libMatilde_Tracker.la libMatilde_Tracker_Mono.la \
     libMatilde_Tracker2.la libMatilde_Tracker2_Mono.la
 	
-libMatilde_Tracker_la_SOURCES = $(SOURCES)
+libMatilde_Tracker_la_SOURCES = $(SRC)
 libMatilde_Tracker_la_CXXFLAGS = $(BM_CXXFLAGS) -DAPI_V1
 libMatilde_Tracker_la_LDFLAGS = $(BM_LIBS)
 libMatilde_Tracker_la_LIBADD = SurfsDSPLib/libdsplib.la $(top_builddir)/common/dsplib/libdsplib.la
 
-libMatilde_Tracker_Mono_la_SOURCES = $(SOURCES)
+libMatilde_Tracker_Mono_la_SOURCES = $(SRC)
 libMatilde_Tracker_Mono_la_CXXFLAGS = $(BM_CXXFLAGS) -DMONO -DAPI_V1
 libMatilde_Tracker_Mono_la_LDFLAGS = $(BM_LIBS)
 libMatilde_Tracker_Mono_la_LIBADD = SurfsDSPLib/libdsplib.la $(top_builddir)/common/dsplib/libdsplib.la
 
-libMatilde_Tracker2_la_SOURCES = $(SOURCES)
+libMatilde_Tracker2_la_SOURCES = $(SRC)
 libMatilde_Tracker2_la_CXXFLAGS = $(BM_CXXFLAGS)
 libMatilde_Tracker2_la_LDFLAGS = $(BM_LIBS)
 libMatilde_Tracker2_la_LIBADD = SurfsDSPLib/libdsplib.la $(top_builddir)/common/dsplib/libdsplib.la
 
-libMatilde_Tracker2_Mono_la_SOURCES = $(SOURCES)
+libMatilde_Tracker2_Mono_la_SOURCES = $(SRC)
 libMatilde_Tracker2_Mono_la_CXXFLAGS = $(BM_CXXFLAGS) -DMONO
 libMatilde_Tracker2_Mono_la_LDFLAGS = $(BM_LIBS)
 libMatilde_Tracker2_Mono_la_LIBADD = SurfsDSPLib/libdsplib.la $(top_builddir)/common/dsplib/libdsplib.la
